fix question width on small landscape screens

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -14,6 +14,11 @@
   grid-row: 1 / -1;
   cursor: pointer;
 }
+@media (min-width: 500px) {
+  .Button {
+    max-width: 30vw;
+  }
+}
 
 .Button:disabled {
   background-color: #aaa;
