--- a/src/containers/Question/Question.module.css
+++ b/src/containers/Question/Question.module.css
@@ -41,7 +41,7 @@
     display: grid;
     padding: 0;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: repeat(3, auto);
     justify-items: center;
     align-items: center;
   }
